# news

./: README-EN.md  README.md  pyproject.toml  requirements.txt  version_configs
.github/workflows/: crawler.yml  docker.yml  issue-guard.yml
config/: ai_analysis_prompt.txt  ai_interests.txt  ai_translation_prompt.txt  config.yaml  frequency_words.txt  timeline.yaml
config/ai_filter/: extract_prompt.txt  prompt.txt  update_tags_prompt.txt
docker/: .env  Dockerfile  Dockerfile.mcp  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py
docs/: index.html
docs/assets/: script.js  style.css
mcp_server/: __init__.py
mcp_server/services/: data_service.py
mcp_server/tools/: analytics.py  search_tools.py  system.py
trendradar/: __init__.py  __main__.py  context.py
trendradar/ai/: __init__.py  analyzer.py  client.py  filter.py  formatter.py  prompt_loader.py  translator.py
trendradar/core/: analyzer.py  frequency.py  loader.py  scheduler.py
trendradar/crawler/rss/: fetcher.py
trendradar/notification/: batch.py  dispatcher.py  formatters.py  renderer.py  senders.py  splitter.py
trendradar/report/: html.py
trendradar/storage/: ai_filter_schema.sql  base.py  local.py  manager.py  remote.py  sqlite_mixin.py
trendradar/utils/: __init__.py  time.py  url.py
